namespace TemplateMethod;

public interface Operator
{
  abstract int getResult(int sumResult, int number);
}